[package]
name = "rust_windows_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44.0"
features = ["Win32_System_Power", "Win32_Foundation", "Win32_System_SystemInformation", "UI_Notifications", "Data_Xml_Dom"]
